# course_work_4

./: pyproject.toml
csr/: main.py  text.json  utils.py  vacancies.py
