[tool.poetry]
name = "course-work-4"
version = "0.1.0"
description = "Course work 4"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "course_work_4"}]

[tool.poetry.dependencies]
python = "3.11"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
